--- a/_posts/2023-12-20-picoCTF_13.md
+++ b/_posts/2023-12-20-picoCTF_13.md
@@ -9,13 +9,9 @@ author: d13
 tags: [ctf, cryptography, picoctf]
 ---
 
-# Description
+# Question
 
-Cryptography can be easy, do you know what ROT13 is? `cvpbPGS{abg_gbb_onq_bs_n_ceboyrz}`
-
-# Hints
-
-This can be solved online if you don't want to do it by hand!
+https://play.picoctf.org/practice/challenge/62
 
 # Solution
 
