--- a/_posts/2023-12-20-picoCTF_13.md
+++ b/_posts/2023-12-20-picoCTF_13.md
@@ -9,14 +9,14 @@ author: d13
 tags: [ctf, cryptography, picoctf]
 ---
 
-# Question
+## Question
 
 https://play.picoctf.org/practice/challenge/62
 
-# Solution
+## Solution
 
 就是問你會不會ROT13而已…上網找個[工具](https://gchq.github.io/CyberChef/#recipe=ROT13(true,true,false,13)&input=Y3ZwYlBHU3thYmdfZ2JiX29ucV9ic19uX2NlYm95cnp9)秒殺
 
-# Flag
+## Flag
 
 picoCTF{not_too_bad_of_a_problem}
